--- a/Src/SharedImports/CsProj.Props/ConfigurationsAndWarnings.props
+++ b/Src/SharedImports/CsProj.Props/ConfigurationsAndWarnings.props
@@ -6,6 +6,10 @@
     <!-- Disable warnings on production build about public APIs not having XDocs -->
     <NoWarn>CS1591</NoWarn>
 
+    <!-- This is a warning that duplicate imports exist - which is because we're importing the DLL specs in each project
+    so projects further down think it's already there-->
+    <NoWarn>CS0436</NoWarn>
+
     <Configurations>Debug;Release;Testing;</Configurations>
 
   </PropertyGroup>
